--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -6,11 +6,19 @@ output: html_document
 ---
 Your document should have a title that briefly summarizes your data analysis
 
+## Synopsis
+
 Synopsis: Immediately after the title, there should be a synopsis which describes and summarizes your analysis in at most 10 complete sentences.
 
 The analysis document must have at least one figure containing a plot. Your analyis must have no more than three figures. Figures may have multiple plots in them (i.e. panel plots), but there cannot be more than three figures total.
 
 You must show all your code for the work in your analysis document. This may make the document a bit verbose, but that is okay. In general, you should ensure that echo = TRUE for every code chunk (this is the default setting in knitr).
+
+### Questions
+
+1. Across the United States, which types of events (as indicated in the `EVTYPE` variable) are most harmful with respect to population health?
+
+2. Across the United States, which types of events have the greatest economic consequences?
 
 ## Data
 
@@ -29,37 +37,26 @@ Documentation of the database:
 
 The events in the database start in the year 1950 and end in November 2011. In the earlier years of the database there are generally fewer events recorded, most likely due to a lack of good records. More recent years should be considered more complete.
 
-## Questions
-
-1. Across the United States, which types of events (as indicated in the `EVTYPE` variable) are most harmful with respect to population health?
-
-2. Across the United States, which types of events have the greatest economic consequences?
-
-## Data Processing
-
-Data Processing describes (in words and code) how the data were loaded into R and processed for analysis. In particular, your analysis must start from the raw CSV file containing the data. You cannot do any preprocessing outside the document. If preprocessing is time-consuming you may consider using the cache = TRUE option for certain code chunks.
+## Setting up
 
 ```{r, results='hide'}
-# Load libraries
-library(data.table)
+echo = TRUE # to ensure that all code will be shown
+
 library(dplyr)
 library(tidyr)
+library(ggplot2)
 ```
 
-### Import the data
+## Import the data
 
 The CSV file is very large (561.6 MB), so to load the data for the first time we use `fread()` method. In R Documentation `fread {data.table}` is described as similar to `read.table` but faster and more convenient.
 
-After reading in the original CSV file, we save the dataset as an RDS file so we could restore the dataset via `readRDS()`. `readRDS()` is considered faster than other `read` methods. 
+After reading in the original CSV file, we save the dataset as an RDS file so we could restore the dataset via `readRDS()`. `readRDS()` is considered faster than other `read` methods.
 
-*These tips were found at the Coursera Discussion Forums. Many thanks to my coursemates*
+The following chunk of code checks if there is an RDS file (if there isn't, it creates it (from the CSV file which is created by unpacking the BZ2 package)) and loads the data into workspace.
 
 ```{r, cache=TRUE, results='hide'}
 # Download and import the data
-
-# In two words, we check if there is the .rds file,
-# and if not, we create it (from csv which is created by unpacking the bz2)
-# and create the 'storm' dataframe.
 
 if (!file.exists("StormData.rds")) {
   # If we don't have the csv, we need to unpack the .bz2 file
@@ -72,42 +69,92 @@ if (!file.exists("StormData.rds")) {
     }
     bunzip2("StormData.csv.bz2")
   }
-  storm <- fread("StormData.csv", na.strings = c("NA", ""))
+  library(data.table)
+  raw.storm <- fread("StormData.csv", na.strings = c("NA", ""))
   saveRDS(storm, "StormData.rds")
-  # The csv file is 535.6 MB
   file.remove("StormData.csv")
 }
 
-# Load the object into workspace
-if (!exists("storm")) {
-  storm <- readRDS("StormData.rds")
+# Load the data into workspace unless we it already exists
+if (!exists("raw.storm")) {
+  raw.storm <- readRDS("StormData.rds")
 }
 
 #============================================================== Create a subset ???????
 
 ```
 
-Quick overview of the internal structure of the dataset, its first and last rows:
+## Data Processing
+
+Quick overview of the internal structure of the dataset and its first three rows:
 
 ```{r, cache=TRUE}
-str(storm)
-head(storm)
-tail(storm)
+str(raw.storm)
+head(raw.storm, n = 3)
 ```
 
-### Explain the variables
-There are 37 columns in this dataset. Their names are not obvious and need further explanation.
+There are 37 columns and 902297 rows in this dataset.
 
-```{r, cache=TRUE, results='hide'}
-
-#============================================================== HOW ???????
-
-```
-
-### Process the data into a format suitable for further analysis
 ```{r, cache=TRUE}
+dim(raw.storm)
+names(raw.storm)
 ```
+
+Since these column names are not obvious, I've made an attempt to explain these variables. You can see the results in [this table](https://github.com/demidovakatya/repdata-peer-assessment-2/blob/master/variable_explanation.md).
+
+These variables may be useful for further analysis:
+
+Variable name | Class | Explanation
+--------------|-------|------------
+BGN_DATE | chr | The beginning date of the event
+BGN_TIME | chr | The beginning time of the event
+END_DATE | chr | The ending date of the event
+END_TIME | chr | The ending time of the event
+STATE | chr | State where the event happened
+EVTYPE | chr | Event type
+FATALITIES | num | Number of fatalities caused by the event
+INJURIES | num | Number of injuries caused by the event
+PROPDMG | num | Property damage caused by the event
+PROPDMGEXP | chr | Property damage multiplier
+CROPDMG | num | Crops damage caused by the event
+CROPDMGEXP | chr | Crops damage multiplier
+
+Create a new dataset from these columns:
+
 ```{r, cache=TRUE}
+storm <- raw.storm %>% select(one_of(c("BGN_DATE", "BGN_TIME", "END_DATE", "END_TIME", "STATE", "EVTYPE", "FATALITIES", "INJURIES", "PROPDMG", "PROPDMGEXP", "CROPDMG", "CROPDMGEXP")))
+
+colnames(storm) <- tolower(colnames(storm))
+```
+
+Convert multipliers in `PROPDMGEXP` and `CROPDMGEXP` columns into numeric values:
+
+```{r, cache=TRUE}
+# A helper function is needed here
+storm$propdmgexp <- toupper(storm$propdmgexp)
+storm$propdmgexp[storm$propdmgexp=="B"] <- 9
+storm$propdmgexp[storm$propdmgexp=="M"] <- 6
+storm$propdmgexp[storm$propdmgexp=="K"] <- 3
+storm$propdmgexp[storm$propdmgexp=="H"] <- 2
+storm$propdmgexp[storm$propdmgexp=="?" | storm$propdmgexp=="+" | storm$propdmgexp=="-"] <- 0
+storm$propdmgexp[is.na(storm$propdmgexp)] <- 0
+storm$propdmgexp <- as.numeric(storm$propdmgexp)
+storm$cropdmgexp <- toupper(storm$cropdmgexp)
+storm$cropdmgexp[storm$cropdmgexp=="B"] <- 9
+storm$cropdmgexp[storm$cropdmgexp=="M"] <- 6
+storm$cropdmgexp[storm$cropdmgexp=="K"] <- 3
+storm$cropdmgexp[storm$cropdmgexp=="H"] <- 2
+storm$cropdmgexp[storm$cropdmgexp=="?" | storm$cropdmgexp=="+" | storm$cropdmgexp=="-"] <- 0
+storm$cropdmgexp[is.na(storm$cropdmgexp)] <- 0
+storm$cropdmgexp <- as.numeric(storm$cropdmgexp)
+
+```
+
+Apply the multipliers:
+
+```{r, cache=TRUE}
+storm <- storm %>% mutate(property.damage=propdmg * 10 ^ propdmgexp)
+storm <- storm %>% mutate(property.damage=cropdmg * 10 ^ cropdmgexp)
 ```
 ```{r, cache=TRUE}
 ```
